removed share feature

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div id="qrcode"></div>
             <button id="downloadBtn" class="hidden">Download QR Code</button>
             <div id="shareSection" class="hidden">
-                <span>Share to:</span>
+                <!-- <span>Share to:</span>
                 <div class="share-buttons">
                     <button class="share-btn" id="shareFacebook" title="Share on Facebook">
                         <i class="fa-brands fa-facebook-f"></i>
@@ -33,9 +33,10 @@
                     <button class="share-btn" id="shareInstagram" title="Share on Instagram">
                         <i class="fa-brands fa-instagram"></i>
                     </button>
-                </div>
+                </div> -->
             </div>
         </div>
+        <div class="commit-id" id="commitHash">COMMIT_ID_PLACEHOLDER</div>
     </div>
     <script src="script.js"></script>
 </body>
