--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div> -->
             </div>
         </div>
-        <div class="commit-id" id="commitHash">COMMIT_ID_PLACEHOLDER</div>
+        <div class="commit-id">Deployed Commit: <span id="commitHash">COMMIT_ID_PLACEHOLDER</span></div>
     </div>
     <script src="script.js"></script>
 </body>
