--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code Generator</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/qr-code-styling@1.6.0/lib/qr-code-styling.js"></script>
     <script src="https://kit.fontawesome.com/4bd13a3eb1.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container">
-        <h1>QR Code Generator</h1>
-        <div class="input-section">
-            <input type="text" id="urlInput" placeholder="Enter URL here..." />
-            <button id="generateBtn">Generate QR Code</button>
+    <div class="container py-4">
+        <h1 class="text-center mb-4">QR Code Generator</h1>
+        <div class="input-section row g-2 mb-4 justify-content-center">
+            <div class="col-12 col-md-8">
+                <input type="text" id="urlInput" class="form-control" placeholder="Enter URL here..." />
+            </div>
+            <div class="col-12 col-md-4 d-grid">
+                <button id="generateBtn" class="btn btn-primary">Generate QR Code</button>
+            </div>
         </div>
-        <div class="qr-section">
-            <div id="qrcode"></div>
-            <button id="downloadBtn" class="hidden">Download QR Code</button>
+        <div class="qr-section text-center">
+            <div id="qrcode" class="mb-3"></div>
+            <button id="downloadBtn" class="btn btn-success hidden mb-2">Download QR Code</button>
             <div id="shareSection" class="hidden">
                 <!-- <span>Share to:</span>
                 <div class="share-buttons">
@@ -37,6 +42,7 @@
             </div>
         </div>
      </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoA6DQD1KQ9Q8cbh6wr6LrZ8p1ztj0yM54f9PkFi3Lg3gBr" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
